kong/konga.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: konga
  namespace: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: konga
  template:
    metadata:
      labels:
        name: konga
        app: konga
    spec:
      nodeName: yang-bj-1
      containers:
      - name: konga
        image: pantsel/konga:latest 
        ports:
        - containerPort: 1337
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: konga
  name: konga-svc
  namespace: kong
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 443
      targetPort: 1337
  selector:
    app: konga
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    ingresscontroller: kong
  annotations:
    kubernetes.io/ingress.class: kong 
  name: kong-admin
  namespace: kong
spec:
  rules:
  - host: kong.ingress.com
    http:
      paths:
      - backend:
          serviceName: konga-svc
          servicePort: 443
        path: /portal
